...
            Scaffold(
                topBar = { PageAppBar(title = stringResource(qrCodeType.titleId)) },
                snackbarHost = { SnackbarHost(hostState = snackbarState) }
            ) { paddingValues ->
                PageContent(
                    qrCodeType = qrCodeType,
                    title = if (isEditMode) state.contentTitle else "",
                    add = { if (isEditMode) viewModel.update(it) else viewModel.add(it) },
                    showSnackbar = showSnackbar,
                    modifier = Modifier.padding(paddingValues),
                )
            }
        } ?: Text(text = "No currentQrCodeType!")
...
        LazyColumn(
            contentPadding = PaddingValues(16.dp),
            horizontalAlignment = Alignment.CenterHorizontally,
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier
                .fillMaxSize()
                .testTag("ContentForm.PageContent")
        ) {
            item { Description(qrCodeType.descriptionId) }
            item { Title(showValidation, title, addInput) }
            items(qrCodeType.inputs) { input -> InputItem(input, addInput, showValidation) }
            item {
                ConfirmButton(
...
    @OptIn(ExperimentalMaterial3Api::class)
    @Composable
    fun PageAppBar(title: String) {
        TopAppBar(
            title = {
                Text(
                    text = title,
                    color = MaterialTheme.colorScheme.onPrimaryContainer
                )
            },
            colors = TopAppBarDefaults.topAppBarColors(
                containerColor = MaterialTheme.colorScheme.primaryContainer
            ),
            modifier = Modifier.testTag("ContentForm.PageAppBar")
        )
    }

    @Composable
    fun Description(@StringRes descriptionId: Int) {
        Text(
            text = stringResource(descriptionId),
            modifier = Modifier.semantics { contentDescription = "Description" },
        )
    }

    @Composable
    fun Title(showValidation: Boolean, title: String, addInput: (InputId, InputData) -> Unit) {
        SingleItem(
            input = Input.Single(InputId.Title, R.string.title, title, KeyboardType.Text),
            showValidation = showValidation,
            addInput = addInput,
            modifier = Modifier.testTag("ContentForm.Title"),
        )
    }

    @Composable
    fun InputItem(
        input: Input,
...
            keyboardType = input.keyboardType,
            isMandatory = !input.isOptional,
            singleLine = input.singleLine,
            isError = showValidation && !data.isValid,
            modifier = modifier
                .fillMaxWidth()
                .testTag("ContentForm.SingleItem"),
        )
    }

    @Composable
    fun GroupItem(group: Input.Group, showValidation: Boolean, addInput: (InputId, InputData) -> Unit) {
        val title = stringResource(group.titleId)
...
                style = MaterialTheme.typography.titleMedium,
                textAlign = TextAlign.Center,
                modifier = Modifier
                    .fillMaxWidth()
                    .background(color = MaterialTheme.colorScheme.secondary)
                    .padding(16.dp)
                    .testTag("GroupItem.Title")
            )
            Column {
                group.inputs.forEach { input ->
                    SingleItem(
                        input = input,
                        showValidation = showValidation,
...
                        is QrCodeType.MeCard -> MeCardContent.digest(inputMap)
                    }
                    addContent(content)
                } else
                    showSnackbar("Invalid Input")
            },
            modifier = Modifier.testTag("ContentForm.ConfirmButton"),
        ) {
            Text(text = "Confirm")
        }
    }
}

